issue #48: provide module aware JavaExec task